# PlantReviver

./: .gitignore  ARCHITECTURE.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  db.py  deps.py  main.py  ratelimit.py  security.py
backend/app/admin/: auth.py  setup.py  views.py
backend/app/integrations/: apns.py  apple.py  claude.py  r2.py  weather.py
backend/app/models/: __init__.py  base.py  device.py  entitlement.py  photo.py  plant.py  preset.py  species.py  subscription.py  usage_counter.py  user.py  watering_event.py
backend/app/repositories/: base.py  plant.py
backend/app/routers/: auth.py  plants.py  sync.py
backend/app/schemas/: plant.py  sync.py
backend/app/services/: ai.py  auth.py  notification.py  photo.py  plant.py  subscription.py  sync.py  weather.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_health.py
infra/terraform/: README.md
infra/terraform/environments/prod/: main.tf  terraform.tfvars.example  variables.tf
infra/terraform/environments/staging/: main.tf
infra/terraform/modules/r2_bucket/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/render_service/: main.tf  outputs.tf  variables.tf
ios/: README.md
ios/PlantReviver/App/: PlantReviverApp.swift
ios/PlantReviver/Models/: Plant.swift
ios/PlantReviver/Networking/: APIClient.swift
ios/PlantReviver/Persistence/: Persistence.swift
ios/PlantReviver/Sync/: SyncEngine.swift
ios/PlantReviver/Views/: PlantListView.swift
